deployment-test.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deployment-test
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      name: test-dep-pod
      labels:
        app: test-app
    spec:
      containers:
      - name: test
        image: pritidevops/harness-healet
        ports:
        - containerPort: 7000
          protocol: TCP
