deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deployment-nginx
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          protocol: TCP
