t.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: webserver
      image: nginx
      ports:
      - containerPort: 80
