service-test.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-svc
  namespace: nginx
spec:
  selector:
      app: test-app
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 80
  type: ClusterIP
